@@ -13,6 +13,8 @@ use constant    enterprises => '.1.3.6.1.4.1' ;
 
 use constant    ricoh       => enterprises . '.367.1.1' ;
 
+use constant    hostname    => enterprises . '.367.3.2.1.6.1.1.7.1';
+
 # Printer-MIB
 use constant    printmib                => mib2 . '.43' ;
 use constant    prtGeneralPrinterName   => printmib . '.5.1.1.16.1' ;
@@ -28,6 +30,20 @@ sub getModel {
     my ($self) = @_;
 
     return $self->get(prtGeneralPrinterName);
+}
+
+sub run {
+    my ($self) = @_;
+
+    my $device = $self->device
+        or return;
+
+    my $name = getCanonicalString($self->get(hostname))
+        or return;
+
+    # Don't override if found hostname is manufacturer+model
+    $device->{INFO}->{NAME} = $name
+        unless $name eq 'RICOH '.$device->{MODEL};
 }
 
 1;
