@@ -2,6 +2,9 @@ Revision history for FusionInventory agent
 
 2.6 not released yet
 
+netdiscovery/netinventory:
+* Updated Ricoh printers support
+
 2.5.2 Mon, 16 Dec 2019
 
 core:
